argo-cd/node-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-fullstack-app
  namespace: pet-project
spec:
  selector:
    matchLabels:
      app: sample-fullstack-app
  template:
    metadata:
      labels:
        app: sample-fullstack-app
    spec:
      containers:
        - name: sample-fullstack-app
          image: logicalogbonna/node-sample-application:c51a0ffee6f326ecea5cc0dfa6c4bb65e927cf61
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5551
